Limit virtual tour content to 5-10 images and either link or video